--- a/images/unity-1.tex
+++ b/images/unity-1.tex
@@ -1,7 +1,7 @@
 % Graphic for TeX using PGF
 % Title: /home/jcelerier/travail/rapport-audio-iscore/images/unity-1.dia
 % Creator: Dia v0.97+git
-% CreationDate: Tue Feb  9 12:32:28 2016
+% CreationDate: Wed Feb 10 10:35:13 2016
 % For: jcelerier
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
@@ -26,12 +26,12 @@
 \definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\pgfpathellipse{\pgfpoint{40.058431\du}{14.165916\du}}{\pgfpoint{2.910031\du}{0\du}}{\pgfpoint{0\du}{2.078716\du}}
+\pgfpathellipse{\pgfpoint{51.410031\du}{20.078716\du}}{\pgfpoint{2.910031\du}{0\du}}{\pgfpoint{0\du}{2.078716\du}}
 \pgfusepath{fill}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\pgfpathellipse{\pgfpoint{40.058431\du}{14.165916\du}}{\pgfpoint{2.910031\du}{0\du}}{\pgfpoint{0\du}{2.078716\du}}
+\pgfpathellipse{\pgfpoint{51.410031\du}{20.078716\du}}{\pgfpoint{2.910031\du}{0\du}}{\pgfpoint{0\du}{2.078716\du}}
 \pgfusepath{stroke}
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
@@ -40,19 +40,19 @@
 \definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (40.058431\du,14.450916\du){i-score maître};
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (51.410031\du,20.363716\du){i-score maître};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\pgfpathellipse{\pgfpoint{27.108448\du}{17.642281\du}}{\pgfpoint{3.345148\du}{0\du}}{\pgfpoint{0\du}{0.982881\du}}
+\pgfpathellipse{\pgfpoint{29.328834\du}{15.482881\du}}{\pgfpoint{3.345148\du}{0\du}}{\pgfpoint{0\du}{0.982881\du}}
 \pgfusepath{fill}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\pgfpathellipse{\pgfpoint{27.108448\du}{17.642281\du}}{\pgfpoint{3.345148\du}{0\du}}{\pgfpoint{0\du}{0.982881\du}}
+\pgfpathellipse{\pgfpoint{29.328834\du}{15.482881\du}}{\pgfpoint{3.345148\du}{0\du}}{\pgfpoint{0\du}{0.982881\du}}
 \pgfusepath{stroke}
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
@@ -61,18 +61,18 @@
 \definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (27.108448\du,17.927281\du){Unity};
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (29.328834\du,15.767881\du){Unity};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 {\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\fill (25.171000\du,20.242200\du)--(25.171000\du,22.142200\du)--(28.046000\du,22.142200\du)--(28.046000\du,20.242200\du)--cycle;
+\fill (27.891334\du,18.500000\du)--(27.891334\du,20.400000\du)--(30.766334\du,20.400000\du)--(30.766334\du,18.500000\du)--cycle;
 }{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\draw (25.171000\du,20.242200\du)--(25.171000\du,22.142200\du)--(28.046000\du,22.142200\du)--(28.046000\du,20.242200\du)--cycle;
+\draw (27.891334\du,18.500000\du)--(27.891334\du,20.400000\du)--(30.766334\du,20.400000\du)--(30.766334\du,18.500000\du)--cycle;
 }% setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
@@ -80,49 +80,7 @@
 \definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (26.608500\du,21.477200\du){Scène};
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetmiterjoin
-\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-\pgfpathellipse{\pgfpoint{21.233458\du}{25.142229\du}}{\pgfpoint{2.155658\du}{0\du}}{\pgfpoint{0\du}{1.077829\du}}
-\pgfusepath{fill}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\pgfpathellipse{\pgfpoint{21.233458\du}{25.142229\du}}{\pgfpoint{2.155658\du}{0\du}}{\pgfpoint{0\du}{1.077829\du}}
-\pgfusepath{stroke}
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (21.233458\du,25.427229\du){Objet 1};
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetmiterjoin
-\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-\pgfpathellipse{\pgfpoint{26.733491\du}{25.217196\du}}{\pgfpoint{2.211191\du}{0\du}}{\pgfpoint{0\du}{1.105596\du}}
-\pgfusepath{fill}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\pgfpathellipse{\pgfpoint{26.733491\du}{25.217196\du}}{\pgfpoint{2.211191\du}{0\du}}{\pgfpoint{0\du}{1.105596\du}}
-\pgfusepath{stroke}
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (26.733491\du,25.502196\du){Objet 2 };
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (29.328834\du,19.735000\du){Scène};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetbuttcap
@@ -137,13 +95,13 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\pgfpathmoveto{\pgfpoint{31.625900\du}{28.167200\du}}
-\pgfpathlineto{\pgfpoint{35.640900\du}{28.167200\du}}
-\pgfpathlineto{\pgfpoint{36.443900\du}{29.167200\du}}
-\pgfpathlineto{\pgfpoint{35.640900\du}{30.167200\du}}
-\pgfpathlineto{\pgfpoint{31.625900\du}{30.167200\du}}
-\pgfpathlineto{\pgfpoint{30.822900\du}{29.167200\du}}
-\pgfpathlineto{\pgfpoint{31.625900\du}{28.167200\du}}
+\pgfpathmoveto{\pgfpoint{40.395852\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{44.413352\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{45.216852\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{44.413352\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{40.395852\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{39.592352\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{40.395852\du}{28.500000\du}}
 \pgfpathclose
 \pgfusepath{fill,stroke}
 % setfont left to latex
@@ -153,19 +111,122 @@
 \definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (33.633400\du,29.447200\du){Script OSSIA};
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (42.404602\du,29.780000\du){Script OSSIA};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (29.328834\du,16.465761\du)--(29.328834\du,18.500000\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (27.891334\du,20.400000\du)--(21.509126\du,24.000000\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (29.328834\du,20.400000\du)--(29.328834\du,24.000000\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (30.766334\du,20.400000\du)--(38.641250\du,24.000000\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (40.282500\du,25.900000\du)--(42.354921\du,28.450146\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (49.352328\du,21.548590\du)--(43.408977\du,28.500000\du);
+}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (49.352328\du,21.548590\du)--(43.806555\du,28.034989\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\pgfpathellipse{\pgfpoint{31.836558\du}{25.240029\du}}{\pgfpoint{2.155658\du}{0\du}}{\pgfpoint{0\du}{1.077829\du}}
+\fill (43.616538\du,27.872527\du)--(43.481632\du,28.415022\du)--(43.996571\du,28.197450\du)--cycle;
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (43.616538\du,27.872527\du)--(43.481632\du,28.415022\du)--(43.996571\du,28.197450\du)--cycle;
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\pgfpathellipse{\pgfpoint{38.213275\du}{38.750000\du}}{\pgfpoint{3.213275\du}{0\du}}{\pgfpoint{0\du}{1.250000\du}}
 \pgfusepath{fill}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\pgfpathellipse{\pgfpoint{31.836558\du}{25.240029\du}}{\pgfpoint{2.155658\du}{0\du}}{\pgfpoint{0\du}{1.077829\du}}
+\pgfpathellipse{\pgfpoint{38.213275\du}{38.750000\du}}{\pgfpoint{3.213275\du}{0\du}}{\pgfpoint{0\du}{1.250000\du}}
 \pgfusepath{stroke}
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
@@ -174,118 +235,7 @@
 \definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (31.836558\du,25.525029\du){Objet 3};
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\draw (27.108400\du,18.625100\du)--(26.608500\du,20.242200\du);
-}
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\draw (25.171000\du,22.142200\du)--(21.233500\du,24.064400\du);
-}
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\draw (26.608500\du,22.142200\du)--(26.733500\du,24.111600\du);
-}
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\draw (28.046000\du,22.142200\du)--(31.836600\du,24.162200\du);
-}
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\draw (31.836600\du,26.317900\du)--(33.478612\du,28.117495\du);
-}
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetbuttcap
-{
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\draw (38.000700\du,15.635800\du)--(34.637200\du,28.167200\du);
-}
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\pgfsetmiterjoin
-\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-\pgfpathellipse{\pgfpoint{33.523394\du}{35.595349\du}}{\pgfpoint{3.021094\du}{0\du}}{\pgfpoint{0\du}{1.419749\du}}
-\pgfusepath{fill}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\pgfpathellipse{\pgfpoint{33.523394\du}{35.595349\du}}{\pgfpoint{3.021094\du}{0\du}}{\pgfpoint{0\du}{1.419749\du}}
-\pgfusepath{stroke}
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfsetstrokeopacity{1.000000}
-\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{diafillcolor}
-\pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (33.523394\du,35.880349\du){Plug-in i-score};
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (38.213275\du,39.035000\du){Plug-in i-score};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetbuttcap
@@ -300,13 +250,13 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\pgfpathmoveto{\pgfpoint{24.801700\du}{28.044700\du}}
-\pgfpathlineto{\pgfpoint{28.849200\du}{28.044700\du}}
-\pgfpathlineto{\pgfpoint{29.658700\du}{29.044700\du}}
-\pgfpathlineto{\pgfpoint{28.849200\du}{30.044700\du}}
-\pgfpathlineto{\pgfpoint{24.801700\du}{30.044700\du}}
-\pgfpathlineto{\pgfpoint{23.992200\du}{29.044700\du}}
-\pgfpathlineto{\pgfpoint{24.801700\du}{28.044700\du}}
+\pgfpathmoveto{\pgfpoint{27.272584\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{31.385084\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{32.207584\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{31.385084\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{27.272584\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{26.450084\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{27.272584\du}{28.500000\du}}
 \pgfpathclose
 \pgfusepath{fill,stroke}
 % setfont left to latex
@@ -316,7 +266,7 @@
 \definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{diafillcolor}
 \pgfsetfillopacity{1.000000}
-\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (26.825450\du,29.324700\du){Objet wWise};
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (29.328834\du,29.780000\du){Script wWise};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetbuttcap
@@ -330,7 +280,7 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\draw (26.733500\du,26.322800\du)--(26.825500\du,28.044700\du);
+\draw (29.328834\du,25.900000\du)--(29.328834\du,28.500000\du);
 }
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
@@ -345,7 +295,89 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\draw (28.342161\du,30.090123\du)--(31.387200\du,34.591400\du);
+\draw (30.862811\du,34.633883\du)--(35.941146\du,37.866117\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (52.523651\du,21.999199\du)--(40.485404\du,37.866117\du);
+}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (52.523651\du,21.999199\du)--(40.855194\du,37.378717\du);
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\fill (40.656029\du,37.227610\du)--(40.552981\du,37.777047\du)--(41.054359\du,37.529824\du)--cycle;
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (40.656029\du,37.227610\du)--(40.552981\du,37.777047\du)--(41.054359\du,37.529824\du)--cycle;
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+\pgfsetmiterjoin
+\pgfsetlinewidth{0.100000\du}
+\pgfsetbuttcap
+\pgfsetmiterjoin
+\pgfsetdash{}{0pt}
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\pgfpathmoveto{\pgfpoint{33.395852\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{37.413352\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{38.216852\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{37.413352\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{33.395852\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{32.592352\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{33.395852\du}{28.500000\du}}
+\pgfpathclose
+\pgfusepath{fill,stroke}
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (35.404602\du,29.380000\du){Script Unity};
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (35.404602\du,30.180000\du){quelconque};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{{1.000000\du}{1.000000\du}}{0\du}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{to}
+\pgfsetarrowsend{to}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (39.596270\du,29.500000\du)--(38.216852\du,29.500000\du);
 }
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
@@ -360,6 +392,213 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \pgfsetstrokeopacity{1.000000}
-\draw (40.058400\du,16.244700\du)--(35.659600\du,34.591400\du);
+\draw (37.000000\du,25.900000\du)--(35.404602\du,28.500000\du);
 }
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+\pgfsetmiterjoin
+\pgfsetlinewidth{0.100000\du}
+\pgfsetbuttcap
+\pgfsetmiterjoin
+\pgfsetdash{}{0pt}
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\pgfpathmoveto{\pgfpoint{19.279126\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{23.739126\du}{28.500000\du}}
+\pgfpathlineto{\pgfpoint{24.631126\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{23.739126\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{19.279126\du}{30.500000\du}}
+\pgfpathlineto{\pgfpoint{18.387126\du}{29.500000\du}}
+\pgfpathlineto{\pgfpoint{19.279126\du}{28.500000\du}}
+\pgfpathclose
+\pgfusepath{fill,stroke}
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (21.509126\du,29.780000\du){API C\# i-score};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (21.509126\du,25.900000\du)--(21.509126\du,28.500000\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\pgfpathellipse{\pgfpoint{29.328834\du}{33.750000\du}}{\pgfpoint{2.169371\du}{0\du}}{\pgfpoint{0\du}{1.250000\du}}
+\pgfusepath{fill}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\pgfpathellipse{\pgfpoint{29.328834\du}{33.750000\du}}{\pgfpoint{2.169371\du}{0\du}}{\pgfpoint{0\du}{1.250000\du}}
+\pgfusepath{stroke}
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (29.328834\du,34.035000\du){wWise};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (29.328834\du,30.500000\du)--(29.328834\du,32.449921\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\pgfpathellipse{\pgfpoint{21.509126\du}{33.750000\du}}{\pgfpoint{3.474286\du}{0\du}}{\pgfpoint{0\du}{1.250000\du}}
+\pgfusepath{fill}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\pgfpathellipse{\pgfpoint{21.509126\du}{33.750000\du}}{\pgfpoint{3.474286\du}{0\du}}{\pgfpoint{0\du}{1.250000\du}}
+\pgfusepath{stroke}
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (21.509126\du,34.035000\du){Player i-score};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (21.509126\du,30.500000\du)--(21.509126\du,32.500000\du);
+}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+% was here!!!
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\pgfpathmoveto{\pgfpoint{51.410136\du}{18.000153\du}}
+\pgfpatharc{326}{166}{18.366831\du and 18.366831\du}
+\pgfusepath{stroke}
+}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\pgfpathmoveto{\pgfpoint{51.410136\du}{18.000153\du}}
+\pgfpatharc{326}{168}{18.366831\du and 18.366831\du}
+\pgfusepath{stroke}
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\fill (18.105443\du,32.469785\du)--(18.472142\du,32.891723\du)--(18.589674\du,32.345201\du)--cycle;
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (18.105443\du,32.469785\du)--(18.472142\du,32.891723\du)--(18.589674\du,32.345201\du)--cycle;
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\fill (19.867876\du,24.000000\du)--(19.867876\du,25.900000\du)--(23.150376\du,25.900000\du)--(23.150376\du,24.000000\du)--cycle;
+}{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (19.867876\du,24.000000\du)--(19.867876\du,25.900000\du)--(23.150376\du,25.900000\du)--(23.150376\du,24.000000\du)--cycle;
+}% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (21.509126\du,25.235000\du){Objet 1};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\fill (27.687584\du,24.000000\du)--(27.687584\du,25.900000\du)--(30.970084\du,25.900000\du)--(30.970084\du,24.000000\du)--cycle;
+}{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (27.687584\du,24.000000\du)--(27.687584\du,25.900000\du)--(30.970084\du,25.900000\du)--(30.970084\du,24.000000\du)--cycle;
+}% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (29.328834\du,25.235000\du){Objet 2};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{diafillcolor}{rgb}{1.000000, 1.000000, 1.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\fill (37.000000\du,24.000000\du)--(37.000000\du,25.900000\du)--(40.282500\du,25.900000\du)--(40.282500\du,24.000000\du)--cycle;
+}{\pgfsetcornersarced{\pgfpoint{0.000000\du}{0.000000\du}}\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\draw (37.000000\du,24.000000\du)--(37.000000\du,25.900000\du)--(40.282500\du,25.900000\du)--(40.282500\du,24.000000\du)--cycle;
+}% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfsetstrokeopacity{1.000000}
+\definecolor{diafillcolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{diafillcolor}
+\pgfsetfillopacity{1.000000}
+\node[anchor=base,inner sep=0pt, outer sep=0pt,color=dialinecolor] at (38.641250\du,25.235000\du){Objet 3};
 \end{tikzpicture}
