--- a/template_Article.tex
+++ b/template_Article.tex
@@ -216,30 +216,34 @@ La latence de sortie propre à Unity est donc d'environ 85 millisecondes.
 Cette latence risque de varier fortement en fonction des périphériques. 
 
 \subsection{Cas 3. Utilisation de i-score à deux échelles}
-i-score est utilisé à haut niveau pour grands scénarios et à bas niveau pour le contrôle des objets sonores.
-Entre les deux, prennent place des communications avec les objets qui gèrent le son.
-
-Dans ce cas, on voudra que i-score soit un plug-in qui puisse s'intégrer avec les API des différents logiciels audio comme wWise; c'est le cas de l'objet 2 en fig.~\ref{fig.com.iscore.unity}.
-
-La question importante est celle du contrôle : si on a plusieurs objets à scénariser, comment 
-ensuite pouvoir contrôler le démarrage de leur scénarisation depuis l'extérieur ? 
-
-Cet extérieur peut être un autre gestionnaire de scénario (comme une instance de i-score), ou bien 
-on peut cacher l'API interne d'i-score derrière une API à utiliser dans Unity pour avoir un environnement entièrement intégré. 
-Cela est nécessaire pour le portage vers certaines plate-formes. Ce cas est semblable à celui de l'objet 1 en fig.~\ref{fig.com.iscore.unity}, mais les flèches qui partent du i-score maître partent alors du player i-score.
-
-On pourrait supposer que dans ce cas, l'horloge d'exécution serait donnée par Unity. 
-La durée d'un tick serait donc celle d'une frame graphique : généralement 16 millisecondes.
-
 \begin{figure}
     \centering
-	\scalebox{0.6}{\input{images/unity-1}}
+    \scalebox{0.5}{\input{images/unity-1}}
     \caption{Illustration des communications possibles entre i-score et Unity:
         Une flèche à pointe noire illustre une communication directe. Une flèche à pointe blanche illustre une communication réseau. Les logiciels sont en rond, les objets Unity en carré, les scripts unity en losange.}
     \label{fig.com.iscore.unity}
 \end{figure}
 
-Un travail est aussi nécessaire sur la gestion automatique des ports.
+i-score est utilisé à haut niveau pour grands scénarios et à bas niveau pour le contrôle des objets sonores.
+Entre les deux, prennent place des communications avec les objets qui gèrent le son.
+
+La question importante est celle du contrôle : si on a plusieurs objets à scénariser, comment 
+ensuite pouvoir contrôler le démarrage de leur scénarisation depuis l'extérieur ? 
+
+Cet extérieur peut être un autre gestionnaire de scénario (comme une instance de i-score).
+Il est aussi possible de peut cacher l'API interne d'i-score derrière une API à utiliser dans Unity pour avoir un environnement entièrement intégré. 
+Cela est nécessaire pour le portage vers certaines plate-formes. 
+Ce cas est semblable à celui de l'objet 1 en fig.~\ref{fig.com.iscore.unity}, mais les flèches qui partent du i-score maître partent alors du player i-score.
+
+Une autre possibilité est que i-score, ou bien un autre logiciel dédié audio (Grapholine ?), soit un plug-in qui puisse s'intégrer avec les API des différents logiciels audio comme wWise; c'est le cas de l'objet 2 en fig.~\ref{fig.com.iscore.unity}.
+La question se pose, dans le cas de i-score, d'un choix d'outil audio permettant de s'intégrer à un séquenceur extérieur.
+
+On pourrait supposer que dans ce cas, l'horloge d'exécution serait donnée par Unity. 
+La durée d'un tick serait donc celle d'une frame graphique : généralement 16 millisecondes.
+
+Enfin, l'implémentation actuelle est donnée dans l'objet 3 : il n'y a pas d'i-score "sous" Unity; le contrôle est fait par un i-score extérieur qui peut contrôler les propriétés de tout objet Unity. 
+
+Un travail est aussi nécessaire sur la gestion automatique des ports, s'il y a plusieurs instances d'i-score qui communiquent directement par réseau, ou bien un travail d'identification est nécessaire si la communication est dirigée par l'horloge d'Unity.
 \subsection{Cas 4. Utilisation de wWise }
 Implémentation de i-score / grapholine / autre comme plug-in wWise ?
 
